--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/snt5eda.css">
 </head>
 <body>
     <main>
-        <canvas id="myCanvas"></canvas>
+        <canvas id="canvas"></canvas>
     </main>
 </body>
 </html>
