--- a/start.html
+++ b/start.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinity Box</title>
+    <title>Start Here</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="sketch.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/snt5eda.css">
-    <!-- <img src="assets/bg-test-1.png" alt="gradient background circles">	 -->
 </head>
 <body>
     <main>
-       <div id="sketch-holder">
-        <!-- <p>sketch goes here and canvas</p> -->
+       <div class="container">
+       <img src="assets/bg-test-1.png" alt="gradient background circles">	
+       <h1 class="text">Welcome</h1>
+
         </div>
     </main>
 </body>
