start page and button

--- a/start.html
+++ b/start.html
@@ -12,7 +12,10 @@
     <main>
        <div class="container">
        <img src="assets/bg-test-1.png" alt="gradient background circles">	
-       <h1 class="text">Welcome</h1>
+       <div class="centered"><h1>Welcome</h1></div>
+       <br>
+       <a href="index.html"><button class="button-center" type="button">Tap here to start your reflection</button></a>
+
 
         </div>
     </main>
