--- a/start.html
+++ b/start.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start Here</title>
+    <title>Infinity Box</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="sketch.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/snt5eda.css">
+    <!-- <img src="assets/bg-test-1.png" alt="gradient background circles">	 -->
 </head>
 <body>
     <main>
-       <div class="container">
-       <img src="assets/bg-test-1.png" alt="gradient background circles">	
-       <div class="centered"><h1>Welcome</h1></div>
-       <br>
-       <a href="index.html"><button class="button-center" type="button">Tap here to start your reflection</button></a>
-
-
+       <div id="sketch-holder">
+        <!-- <p>sketch goes here and canvas</p> -->
         </div>
     </main>
 </body>
