--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <img src="assets/bg-test-1.png" alt="gradient background circles">	
        <div class="centered"><h1>Welcome</h1></div>
        <br>
-       <a href="index.html"><button class="button-center" type="button">Tap here to start your reflection</button></a>
+       <a href="start.html"><button class="button-center" type="button">Tap here to start your reflection</button></a>
 
 
         </div>
